[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-cypher"
version = "0.9.2"
dependencies = [
    "py2neo",
    "pandas"
]
authors = [
  { name="Pete Hughes" },
]
description = "Cypher magic for IPython"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/petehughes/cypher-magic"
"Bug Tracker" = "https://github.com/petehughes/cypher-magic/issues"